Fix #5476 "Missing space between static readonly control and top of grid"

--- a/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-base.less
+++ b/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-base.less
@@ -338,11 +338,6 @@
                 }
             }
 
-            // For those controls that still have a display: block in view mode, make sure there is no top margin
-            .fr-grid-td .xforms-control, .fr-grid-td .fr-component-group {
-                margin-top: 0;
-            }
-
             .fr-repeat-multiple-rows {
                 .fr-grid-head { display: none }             // Hide the top header row, as we don't need the space for the *add* icon in view mode
                 border-top: none;                           // Avoid double border at the top
